--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -343,6 +343,10 @@
   height: fit-content;
 }
 
+@utility w-* {
+  width: --value([ *]);
+}
+
 @utility icon-* {
   --icon-color: --value([ *]);
   --icon-color: --value(--color- *);
