feat: add accordion (#275)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* feat: initial accordion setup

* fix: circular type deps

* feat: update accordion component and update some token names

* fix: update padding issue on the accordion

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* fix: add focus styles

* fix: update storybook

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: add the focus styles for the accordion and fix a bug

* fix: update package.json exports

* fix: update package.json exports

* chore: changeset

* style: updated the accordion component to match the naming convention

* style: remove composeRenderProps

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -94,7 +94,7 @@
   --classification-confidential: #0033a0;
   --classification-secret: #c8102e;
   --classification-top-secret: #ff8c00;
-  --classification-top-secret-sci: #fce83a;
+  --classification-ts-sci: #fce83a;
 
   --header-xxl-size: 32px;
   --header-xxl-height: 40px;
@@ -198,7 +198,7 @@
   --color-classification-confidential: var(--classification-confidential, #0033a0);
   --color-classification-secret: var(--classification-secret, #c8102e);
   --color-classification-top-secret: var(--classification-top-secret, #ff8c00);
-  --color-classification-top-secret-sci: var(--classification-top-secret-sci, #fce83a);
+  --color-classification-ts-sci: var(--classification-ts-sci, #fce83a);
 
   /** Radius **/
   --radius-none: 0px;
@@ -363,6 +363,3 @@
   --icon-color: --value([ *]);
   --icon-color: --value(--color- *);
 }
-
-@custom-variant pressed (&:where([data-pressed] *));
-@custom-variant ai-hovered (&:where([data-hovered] *));
