Added the search field component, stories, and test

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -363,3 +363,9 @@
   --icon-color: --value([ *]);
   --icon-color: --value(--color- *);
 }
+
+@layer components {
+  .hide-cancel::-webkit-search-cancel-button {
+    display: none;
+  }
+}
