feat: add querybuilder component (#288)
* feat: add basic documentation to the existing components

* chore: fix lockfile

* chore: changeset

* fix: move documentation to comments/types rather than embedding in stories

* fix: update configuration to generate more accurate prop descriptions

* fix: swap to the @link block instead of the a tag in the docblock

* style: update alt text for avatar examples

* fix: circular type deps

* fix: attempt to fix build error

* chore: regenerate pnpm-lock with pnpm 9

* chore: change node version to 18

* fix: attempt to update pnpm-lock based on main

* fix: update default background colors

* fix: update spacing story bg color

* fix: update colors

* fix: add focus styles

* fix: update storybook

* feat: added text field component

* fix: swap borders to outlines and add label

* fix: update the text weights

* fix: update the text-field to handle the new isClearable property

* fix: some cleanup around readonly

* fix: fix an issue with the keyboard event listener

* fix: update package.json exports

* fix: update package.json exports

* feat: set up the combobox

* chore: changeset

* fix: update package.json exports

* fix: fix style issues with the disabled combobox

* fix: update icons and dropdown style

* fix: remove unused icons

* fix: remove duplicate declaration

* fix: add todo and remove icon export

* fix: remove unused index file

* fix: as tsexpect error

* fix: add TODO items

* chore: remove the multiselect science

* chore: add tiny test

* feat: querybuilder essentials

* fix: remove stray trash icon

* fix: clean up value selector

* fix: make combinator default to AND and ensure vertical width

* fix: move styles into querybuilder.css

* chore: add changeset

* fix: add notes and remove sections from the value selector until we support in the combobox

* chore: memoize function

* chore: rollback unintentional merge artifact

* chore: make sure qb is exported as independent package

* chore: remove g

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -368,4 +368,52 @@
   .hide-cancel::-webkit-search-cancel-button {
     display: none;
   }
+
+  /**
+   * Rule line only applicable to the QueryBuilder component
+   */
+  .queryBuilder .rule-lines::before {
+    content: '';
+    width: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    background-image:
+      repeating-linear-gradient(to bottom, var(--neutral-04), var(--neutral-04)),
+      repeating-linear-gradient(to right, var(--neutral-04), var(--neutral-04));
+    background-position: left -1px, center;
+    background-repeat: repeat-y, repeat-x;
+    background-size: 1px 4px, 4px 1px;
+  }
+
+  .queryBuilder .group > span.rule-lines:last-of-type::before {
+    content: '';
+    width: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 50%;
+    left: 50%;
+    background-image:
+      repeating-linear-gradient(to bottom,var(--neutral-04), var(--neutral-04)),
+      repeating-linear-gradient(to right, var(--neutral-04), var(--neutral-04));
+    background-position: left -1px, bottom;
+    background-repeat: repeat-y, repeat-x;
+    background-size: 1px 4px, 4px 1px;
+  }
+
+  .queryBuilder .group > span.rule-lines:last-of-type:has(~ div.group)::before {
+    content: '';
+    width: 10px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    background-image:
+      repeating-linear-gradient(to bottom, var(--neutral-04), var(--neutral-04)),
+      repeating-linear-gradient(to right, var(--neutral-04), var(--neutral-04));
+    background-position: left -1px, center;
+    background-repeat: repeat-y, repeat-x;
+    background-size: 1px 4px, 4px 1px;
+  }
 }
