refactor: 💡 convert icon to tv, add provider, handle overrides
refactor uses of icon, get rid of icon size utility class

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -227,6 +227,11 @@
   --spacing-xl: 24px;
   --spacing-xxl: 40px;
   --spacing-oversized: 80px;
+
+  --icon-size-l: var(--spacing-xl);
+  --icon-size-m: 20px;
+  --icon-size-s: var(--spacing-l);
+  --icon-size-xs: var(--spacing-m);
 }
 
 @utility text-header-xxl {
@@ -350,11 +355,6 @@
 @utility icon-* {
   --icon-color: --value([ *]);
   --icon-color: --value(--color- *);
-}
-
-@utility icon-size-* {
-  --icon-size: --value([ *]);
-  --icon-size: --value(--spacing- *);
 }
 
 @utility fg-* {
