--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -30,8 +30,7 @@
   --neutral-08: #2f2f31;
   --neutral-09: #222222;
   --neutral-10: #0b0b0b;
-
-  --neutral-11: #FF0000;
+  --neutral-11: #000000;
 
   --alpha-black-01: rgba(0, 0, 0, 0.08);
   --alpha-black-02: rgba(0, 0, 0, 0.4);
@@ -275,7 +274,6 @@
   letter-spacing: 0.25px;
   line-height: var(--header-xs-height);
 }
-
 
 @utility text-body-l {
   font-size: var(--body-l-size);
