fix: default to font-primary (#332)
* fix: apply font-primary to body

* chore: add changeset

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -364,6 +364,10 @@
   --icon-color: --value(--color- *);
 }
 
+body {
+  @apply font-primary;
+}
+
 @layer components {
   .hide-cancel::-webkit-search-cancel-button {
     display: none;
