chore: use globalLayers to support layer orchestration when migrating to new design system (#333)
* use globalLayers to support layer orchestration when migrating to new design system

* changeset

* chore: update example app. show old design system and design toolkit buttons side by side

--- a/apps/next/src/app/globals.css
+++ b/apps/next/src/app/globals.css
@@ -9,6 +9,10 @@
  * OF ANY KIND, either express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
+
+/* this @layer declaration needs to be before the stylesheet imports */
+@layer properties, theme,  base, old_ds_reset, old_ds_framework, old_ds_overrides, components, utilities;
+
 @import '@accelint/design-system/styles';
 @import "@accelint/design-toolkit/styles";
 @source "../../node_modules/@accelint/design-toolkit";
