chore: semantic variables should be exported not raw; generate theme blocks

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -15,112 +15,9 @@
 @import '@fontsource/roboto-mono';
 @import 'tailwindcss';
 
-/* Import generated tokens */
-@import './tokens/generated/tokens.css';
+/* Import generated themes.css */
+@import './tokens/generated/themes.css';
 
-@theme {
-  /* Remove the default Tailwind styles. */
-  --color-*: initial;
-  --font-*: initial;
-  --radius-*: initial;
-  --shadow-*: initial;
-  --spacing-*: initial;
-  --text-*: initial;
-
-  /** Fonts **/
-  --font-primary: "Roboto Flex", sans-serif;
-  --font-display: "Roboto Mono", monospace;
-
-  /** Colors **/
-  --color-current: currentColor;
-  --color-surface-default: var(--colors-neutral-10, #0b0b0b);
-  --color-surface-raised: var(--colors-neutral-09, #222222);
-  --color-surface-overlay: var(--colors-neutral-08, #2f2f31);
-  --color-transparent-dark: var(--colors-alpha-black-02, rgba(0, 0, 0, 0.4));
-  --color-transparent-light: var(--colors-alpha-white-01, rgba(255, 255, 255, 0.08));
-
-  --color-interactive-default: var(--colors-neutral-02, #e6e6e6);
-  --color-interactive-hover-light: var(--colors-neutral-03, #898989);
-  --color-interactive-hover-dark: var(--colors-neutral-08, #2f2f31);
-  --color-interactive-disabled: var(--colors-neutral-07, #383838);
-
-  --color-static-light: var(--colors-neutral-07, #383838);
-  --color-static-dark: var(--colors-neutral-09, #222222);
-  --color-interactive: var(--colors-neutral-05, #565656);
-  --color-interactive-hover: var(--colors-neutral-01, #ffffff);
-
-  --color-highlight-bold: var(--colors-highlight-primary-03, #28f5be);
-  --color-highlight-hover: var(--colors-highlight-primary-04, #189372);
-  --color-highlight-subtle: var(--colors-highlight-primary-05, #0a3d30);
-  --color-info-bold: var(--colors-utility-info-03, #686868);
-  --color-info-hover: var(--colors-utility-info-04, #424244);
-  --color-info-subtle: var(--colors-utility-info-05, #222222);
-  --color-advisory-bold: var(--colors-utility-advisory-03, #62a6ff);
-  --color-advisory-hover: var(--colors-utility-advisory-04, #3a6499);
-  --color-advisory-subtle: var(--colors-utility-advisory-05, #142133);
-  --color-normal-bold: var(--colors-utility-normal-03, #30d27e);
-  --color-normal-hover: var(--colors-utility-normal-04, #1c7e4c);
-  --color-normal-subtle: var(--colors-utility-normal-05, #0a2a19);
-  --color-serious-bold: var(--colors-utility-serious-03, #fca400);
-  --color-serious-hover: var(--colors-utility-serious-04, #976201);
-  --color-serious-subtle: var(--colors-utility-serious-05, #322100);
-  --color-critical-bold: var(--colors-utility-critical-03, #d4231d);
-  --color-critical-hover: var(--colors-utility-critical-04, #7f1511);
-  --color-critical-subtle: var(--colors-utility-critical-05, #2a0706);
-
-  --color-default-light: var(--colors-neutral-01, #ffffff);
-  --color-default-dark: var(--colors-neutral-03, #898989);
-  --color-inverse-dark: var(--colors-neutral-07,#383838);
-  --color-inverse-light: var(--colors-neutral-09, #222222);
-  --color-disabled: var(--colors-neutral-05, #565656);
-  --color-highlight: var(--colors-highlight-primary-03, #28f5be);
-  --color-info: var(--colors-neutral-04, #686868);
-  --color-advisory: var(--colors-utility-advisory-03, #62a6ff);
-  --color-normal: var(--colors-utility-normal-03, #30d27e);
-  --color-serious: var(--colors-utility-serious-03, #fca400);
-  --color-critical: var(--colors-utility-critical-03, #d4231d);
-
-  --color-classification-missing: var(--colors-neutral-10, #0b0b0b);
-  --color-classification-unclass: var(--colors-classification-unclass, #007A33);
-  --color-classification-cui: var(--colors-classification-cui, #502b85);
-  --color-classification-confidential: var(--colors-classification-confidential, #0033a0);
-  --color-classification-secret: var(--colors-classification-secret, #c8102e);
-  --color-classification-top-secret: var(--colors-classification-top-secret, #ff8c00);
-  --color-classification-ts-sci: var(--colors-classification-ts-sci, #fce83a);
-
-  /** Radius **/
-  --radius-none: 0px;
-  --radius-small: 2px;
-  --radius-medium: 4px;
-  --radius-large: 8px;
-  --radius-round: 80px;
-
-  /** Shadows **/
-  --shadow-elevation-default: initial;
-  --shadow-elevation-overlay:
-    0 8px 10px 0 rgba(0 0 0 / 0.2), 0 6px 30px 0 rgba(0 0 0 / 0.12),
-    0 16px 24px 0 rgba(0 0 0 / 0.14);
-  --shadow-elevation-raised:
-    0 5px 5px 0 rgba(0 0 0 / 0.2), 0 3px 14px 0 rgba(0 0 0 / 0.12),
-    0 8px 10px 0 rgba(0 0 0 / 0.14);
-
-  /** Spacing **/
-  --spacing-none: unset;
-  --spacing-0: 0;
-  --spacing-xxs: 2px;
-  --spacing-xs: 4px;
-  --spacing-s: 8px;
-  --spacing-m: 12px;
-  --spacing-l: 16px;
-  --spacing-xl: 24px;
-  --spacing-xxl: 40px;
-  --spacing-oversized: 80px;
-
-  --icon-size-l: var(--spacing-xl);
-  --icon-size-m: 20px;
-  --icon-size-s: var(--spacing-l);
-  --icon-size-xs: var(--spacing-m);
-}
 
 /** Recreating https://github.com/adobe/react-spectrum/blob/main/packages/tailwindcss-react-aria-components/src/index.js without RAC selectors (:where([data-rac])) or prefix and combining with native selectors **/
 @custom-variant placement-left { &[data-placement="left"] { @slot }}
