refactor: 💡 avatar and badge to new styling standard

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -23,10 +23,10 @@
 }
 
 /** Recreating https://github.com/adobe/react-spectrum/blob/main/packages/tailwindcss-react-aria-components/src/index.js without RAC selectors (:where([data-rac])) or prefix and combining with native selectors **/
-@custom-variant placement-left { &[data-placement="left"] { @slot }}
-@custom-variant placement-right { &[data-placement="right"] { @slot }}
-@custom-variant placement-top { &[data-placement="top"] { @slot }}
-@custom-variant placement-bottom { &[data-placement="bottom"] { @slot }}
+@custom-variant placement-left { &[data-placement~="left"] { @slot }}
+@custom-variant placement-right { &[data-placement~="right"] { @slot }}
+@custom-variant placement-top { &[data-placement~="top"] { @slot }}
+@custom-variant placement-bottom { &[data-placement~="bottom"] { @slot }}
 
 @custom-variant type-literal { &[data-type="literal"] { @slot }}
 @custom-variant type-year { &[data-type="year"] { @slot }}
