refactor: 💡 convert size to variant selector

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -28,6 +28,12 @@
 @custom-variant placement-top { &[data-placement~="top"] { @slot }}
 @custom-variant placement-bottom { &[data-placement~="bottom"] { @slot }}
 
+@custom-variant size-xlarge { &[data-size="xlarge"] { @slot }}
+@custom-variant size-large { &[data-size="large"] { @slot }}
+@custom-variant size-medium { &[data-size="medium"] { @slot }}
+@custom-variant size-small { &[data-size="small"] { @slot }}
+@custom-variant size-xsmall { &[data-size="xsmall"] { @slot }}
+
 @custom-variant type-literal { &[data-type="literal"] { @slot }}
 @custom-variant type-year { &[data-type="year"] { @slot }}
 @custom-variant type-month { &[data-type="month"] { @slot }}
