refactor: 💡 add input, refactor text field, fix checkbox
fix outline inset, add checked selector, add typography spacing tokens

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -99,7 +99,7 @@
 
 @custom-variant pressed (&[data-pressed], &:active);
 
-@custom-variant selected (&[data-selected]);
+@custom-variant selected (&[data-selected], &:checked);
 @custom-variant selection-start (&[data-selection-start]);
 @custom-variant selection-end (&[data-selection-end]);
 
@@ -111,108 +111,112 @@
 @custom-variant enabled (&:not([disabled], [data-disabled]), &:enabled);
 @custom-variant disabled (&:is([disabled], [data-disabled]), &:disabled);
 
+@utility outline {
+  outline-offset: -1px;
+}
+
 @utility text-header-xxl {
   font-size: var(--typography-header-xxl-size);
   font-weight: 500;
-  letter-spacing: 0px;
+  letter-spacing: var(--typography-header-xxl-spacing);
   line-height: var(--typography-header-xxl-height);
 }
 
 @utility text-header-xl {
   font-size: var(--typography-header-xl-size);
   font-weight: 500;
-  letter-spacing: 0.18px;
+  letter-spacing: var(--typography-header-xl-spacing);
   line-height: var(--typography-header-xl-height);
 }
 
 @utility text-header-l {
   font-size: var(--typography-header-l-size);
   font-weight: 500;
-  letter-spacing: 0.18px;
+  letter-spacing: var(--typography-header-l-spacing);
   line-height: var(--typography-header-l-height);
 }
 
 @utility text-header-m {
   font-size: var(--typography-header-m-size);
   font-weight: 500;
-  letter-spacing: 0.25px;
+  letter-spacing: var(--typography-header-m-spacing);
   line-height: var(--typography-header-m-height);
 }
 
 @utility text-header-s {
   font-size: var(--typography-header-s-size);
   font-weight: 500;
-  letter-spacing: 0.4px;
+  letter-spacing: var(--typography-header-s-spacing);
   line-height: var(--typography-header-s-height);
 }
 
 @utility text-header-xs {
   font-size: var(--typography-header-xs-size);
   font-weight: 500;
-  letter-spacing: 0.25px;
+  letter-spacing: var(--typography-header-xs-spacing);
   line-height: var(--typography-header-xs-height);
 }
 
 @utility text-body-l {
   font-size: var(--typography-body-l-size);
   font-weight: 400;
-  letter-spacing: 0.5px;
+  letter-spacing: var(--typography-body-l-spacing);
   line-height: var(--typography-body-l-height);
 }
 
 @utility text-body-m {
   font-size: var(--typography-body-m-size);
   font-weight: 400;
-  letter-spacing: 0.25px;
+  letter-spacing: var(--typography-body-m-spacing);
   line-height: var(--typography-body-m-height);
 }
 
 @utility text-body-s {
   font-size: var(--typography-body-s-size);
   font-weight: 400;
-  letter-spacing: 0.4px;
+  letter-spacing: var(--typography-body-s-spacing);
   line-height: var(--typography-body-s-height);
 }
 
 @utility text-body-xs {
   font-size: var(--typography-body-xs-size);
   font-weight: 400;
-  letter-spacing: 0.5px;
+  letter-spacing: var(--typography-body-xs-spacing);
   line-height: var(--typography-body-xs-height);
 }
 
 @utility text-body-xxs {
   font-size: var(--typography-body-xxs-size);
   font-weight: 400;
-  letter-spacing: 0.25px;
+  letter-spacing: var(--typography-body-xxs-spacing);
   line-height: var(--typography-body-xxs-height);
 }
 
 @utility text-button-l {
   font-size: var(--typography-button-l-size);
   font-weight: bold;
-  letter-spacing: 0.5px;
+  letter-spacing: var(--typography-button-l-spacing);
   line-height: var(--typography-button-l-height);
 }
 
 @utility text-button-m {
   font-size: var(--typography-button-m-size);
   font-weight: bold;
-  letter-spacing: 0.25px;
+  letter-spacing: var(--typography-button-m-spacing);
   line-height: var(--typography-button-m-height);
 }
 
 @utility text-button-s {
   font-size: var(--typography-button-s-size);
   font-weight: bold;
-  letter-spacing: 0.4px;
+  letter-spacing: var(--typography-button-s-spacing);
   line-height: var(--typography-button-s-height);
 }
 
 @utility text-button-xs {
   font-size: var(--typography-button-xs-size);
   font-weight: bold;
-  letter-spacing: 0.5px;
+  letter-spacing: var(--typography-button-xs-spacing);
   line-height: var(--typography-button-xs-height);
 }
 
