--- a/design-toolkit/components/src/tokens/tokens.css
+++ b/design-toolkit/components/src/tokens/tokens.css
@@ -76,34 +76,49 @@
   --colors-classification-ts-sci: #fce83a;
   --typography-header-xxl-size: 32px;
   --typography-header-xxl-height: 40px;
+  --typography-header-xxl-spacing: 0px;
   --typography-header-xl-size: 24px;
   --typography-header-xl-height: 28px;
+  --typography-header-xl-spacing: 0.18px;
   --typography-header-l-size: 20px;
   --typography-header-l-height: 24px;
+  --typography-header-l-spacing: 0.18px;
   --typography-header-m-size: 14px;
   --typography-header-m-height: 20px;
+  --typography-header-m-spacing: 0.25px;
   --typography-header-s-size: 12px;
   --typography-header-s-height: 16px;
+  --typography-header-s-spacing: 0.4px;
   --typography-header-xs-size: 10px;
   --typography-header-xs-height: 12px;
+  --typography-header-xs-spacing: 0.25px;
   --typography-body-l-size: 16px;
   --typography-body-l-height: 24px;
+  --typography-body-l-spacing: 0.5px;
   --typography-body-m-size: 14px;
   --typography-body-m-height: 20px;
+  --typography-body-m-spacing: 0.25px;
   --typography-body-s-size: 12px;
   --typography-body-s-height: 16px;
+  --typography-body-s-spacing: 0.4px;
   --typography-body-xs-size: 10px;
   --typography-body-xs-height: 12px;
+  --typography-body-xs-spacing: 0.5px;
   --typography-body-xxs-size: 9px;
   --typography-body-xxs-height: 12px;
+  --typography-body-xxs-spacing: 0.25px;
   --typography-button-l-size: 16px;
   --typography-button-l-height: 24px;
+  --typography-button-l-spacing: 0.5px;
   --typography-button-m-size: 14px;
   --typography-button-m-height: 20px;
+  --typography-button-m-spacing: 0.25px;
   --typography-button-s-size: 12px;
   --typography-button-s-height: 16px;
+  --typography-button-s-spacing: 0.4px;
   --typography-button-xs-size: 10px;
   --typography-button-xs-height: 12px;
+  --typography-button-xs-spacing: 0.5px;
   --spacing-0: 0px;
   --spacing-none: unset;
   --spacing-xxs: 2px;
